# ChangeLog for dev-cpp/libgnomecanvasmm
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libgnomecanvasmm/ChangeLog,v 1.11 2004/05/21 15:26:45 kugelfang Exp $

  21 May 2004; Yi Qiang <khai@gentoo.org> libgnomecanvasmm-2.0.0.ebuild,
  libgnomecanvasmm-2.0.1.ebuild, libgnomecanvasmm-2.6.0.ebuild:
  Fixed slots.

  21 May 2004; Danny van Dyk <kugelfang@gentoo.org>
  libgnomecanvasmm-2.6.0.ebuild:
  Added aclocal/automake/autoconf; necessary on amd64. Marked ~amd64.

*libgnomecanvasmm-2.6.0 (09 May 2004)

  09 May 2004; Yi Qiang <khai@gentoo.org> :
  Version bump

  16 Apr 2004; Danny van Dyk <kugelfang@gentoo.org>
  libgnomecanvasmm-2.0.1.ebuild:
  Added src_compile to make it work on amd64, marked ~amd64

  12 Apr 2004; Guy Martin <gmsoft@gentoo.org> libgnomecanvasmm-2.0.1.ebuild:
  Marked stable on hppa.

  11 Mar 2004; Lars Weiler <pylon@gentoo.org> libgnomecanvasmm-2.0.1.ebuild:
  stable on ppc

  16 Feb 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  libgnomecanvasmm-2.0.0.ebuild:
  stable on sparc

*libgnomecanvasmm-2.0.1 (29 Aug 2003)

  29 Aug 2003; foser <foser@gentoo.org> libgnomecanvasmm-2.0.1.ebuild :
  New version

*libgnomecanvasmm-2.0.0 (22 Dec 2002)

  22 Dec 2002; foser <foser@gentoo.org> libgnomecanvas-2.0.0.ebuild :
  new version, first stable gnome2 release

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*libgnomecanvasmm-1.3.9 (13 Sep 2002)
  13 Sep 2002; Spider <spider@gentoo.org> libgnomecanvasmm-1.3.9.ebuild :
  new version by Markus Bertheau <twanger@bluetwanger.de>
  
*libgnomecanvasmm-1.3.6 (17 Jun 2002)
  17 Jun 2002; Spider <spider@gentoo.org> libgnomecanvasmm-1.3.6.ebuild :
  version bump
   
*libgnomecanvasmm-1.3.5 (02 Jun 2002)
  02 Jun 2002; Spider <spider@gentoo.org> ChangeLog libgnomecanvasmm-1.3.5.ebuild :
  gnome2.eclass version of foser <foser@sesmar.eu.org> gnome-c++
  bindings.
  initial release
