@@ -1,8 +1,10 @@
-MD5 a6c66f5d388d99effec577a3d470eabe ChangeLog 1973
 MD5 077b66a26e18f25aa0f9e0b1cadb118d libgnomecanvasmm-2.0.0.ebuild 639
-MD5 9f48d2a770bdf96bc282cfaffbbdc30e libgnomecanvasmm-2.0.1.ebuild 743
+MD5 31782ef6fcd7f305fa85be4088cbf483 libgnomecanvasmm-2.6.1.ebuild 756
 MD5 31782ef6fcd7f305fa85be4088cbf483 libgnomecanvasmm-2.6.0.ebuild 756
+MD5 9f48d2a770bdf96bc282cfaffbbdc30e libgnomecanvasmm-2.0.1.ebuild 743
+MD5 a6c66f5d388d99effec577a3d470eabe ChangeLog 1973
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 MD5 374e73c2ee23f5d948e866b203faaf63 files/digest-libgnomecanvasmm-2.0.0 74
 MD5 503f4b94ee2876c2eb123fb633749c34 files/digest-libgnomecanvasmm-2.0.1 74
 MD5 431e51ec601c0bc99667968d1177375a files/digest-libgnomecanvasmm-2.6.0 75
+MD5 9d1a7838537ec9856edb6298891255e0 files/digest-libgnomecanvasmm-2.6.1 75
