@@ -1,0 +1,1 @@
+MD5 52e6eea23dad7873485439f11d5b5a43 libgnomecanvasmm-2.6.1.tar.bz2 306363
