@@ -1,6 +1,11 @@
 # ChangeLog for dev-cpp/libgnomecanvasmm
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libgnomecanvasmm/ChangeLog,v 1.11 2004/05/21 15:26:45 kugelfang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libgnomecanvasmm/ChangeLog,v 1.12 2004/05/29 20:14:02 lv Exp $
+
+*libgnomecanvasmm-2.6.1 (29 May 2004)
+
+  29 May 2004; Travis Tilley <lv@gentoo.org> +libgnomecanvasmm-2.6.1.ebuild:
+  version bump. this release compiles using gcc 3.4
 
   21 May 2004; Yi Qiang <khai@gentoo.org> libgnomecanvasmm-2.0.0.ebuild,
   libgnomecanvasmm-2.0.1.ebuild, libgnomecanvasmm-2.6.0.ebuild:
